document behavior for different input/output file styles

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -1076,7 +1076,7 @@ described in \ref{sec:HYDRAULIC-FLUID-DATA}
 
 
 
-\subsection{Include}
+\subsection{Include}\label{sec:INCLUDE}
 The \kw{include} directive
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
