--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -24,6 +24,7 @@ MBDyn 1.X-Devel
 		- fix typo in eigenanalysis documentation (Patrick Rix)
 		- fix working directory setting
 		- fix input/output file name inconsistencies
+		- fix crash in output eigenvectors (noted by Reinhard Resch)
 
 MBDyn 1.4.0
 	Enhancements:
