--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -251,6 +251,7 @@ E. Bugs/missing features:
 	- allow "mt" from command-line
 	- allow make of mod-* and moddae-* modules
 	- implement referenceable template drive callers (much like regular drive callers) (DONE)
+	- implement support for pardiso linear solver when compiled with icc
 
 
 
