add col numbers

--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -3114,11 +3114,11 @@ depending on the type of joint, which, when available, is described along
 with the joint description.
 Here the standard part is described:
 \begin{itemize}
-    \item the label of the joint
-    \item the three components of the reaction force in a local reference
-    \item the three components of the reaction couple in a local frame
-    \item the three components of the reaction force in the global frame
-    \item the three components of the reaction couple, rotated into the
+    \item column 1: the label of the joint
+    \item columns 2--4: the three components of the reaction force in a local reference
+    \item columns 5--7: the three components of the reaction couple in a local frame
+    \item columns 8--10: the three components of the reaction force in the global frame
+    \item columns 11--13: the three components of the reaction couple, rotated into the
           global frame
 \end{itemize}
 Legal joint types, with relative data, are:
