--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -3451,6 +3451,80 @@ not implemented yet, use a
 and a \kw{prismatic} 
 instead.
 
+
+
+
+\subsection{Deformable Axial Joint}
+\label{sec:EL:JOINT:DEFORMABLEAXIAL}
+This joint implements a configuration dependent moment that is exchanged
+between two nodes about an axis rigidly attached to the first node.
+It is intended to be used in conjunction with another joint that
+constrains the relative rotation between the two nodes about the other axes,
+although no check is in place.
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{joint_type} ::= \kw{deformable axial joint}
+
+    \bnt{joint_arglist} ::= 
+        \bnt{node_1_label}
+            [ , \kw{position} , (\ty{Vec3}) \bnt{relative_offset_1} ]
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+        \bnt{node_2_label}
+            [ , \kw{position} , (\ty{Vec3}) \bnt{relative_offset_2} ]
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
+        \bnt{(ConstitutiveLaw<1D>)} \bnt{const_law}
+\end{Verbatim}
+%\end{verbatim}
+
+\subsubsection{Private Data}
+The following data is available:
+\begin{enumerate}
+\item \kw{"rz"} relative rotation about axis 3, used as strain in the constitutive law
+\item \kw{"wz"} relative angular velocity about axis 3, used as strain rate in the constitutive law
+\item \kw{"Mz"} moment about axis 3, output by the constitutive law
+\end{enumerate}
+In addition, the joint provides
+access to any private data provided by the constitutive law.
+They are accessed by prefixing the name of the data with the string
+\kw{"constitutiveLaw."}; see the specific constitutive law
+description of the available data in Section~\ref{sec:CONSTITUTIVE-LAWS}.
+
+
+\subsubsection{Hints}
+When wrapped by a \kw{driven} element, the \kw{deformable axial joint}
+honors the following hints:
+\begin{itemize}
+\item \kw{hinge\{1\}} the orientation with respect to node 1
+of the reference used to compute the linear strain is reset
+to the value resulting from the node 2 hinge orientation
+and the node 1 orientation
+\begin{displaymath}
+	\tilde{\T{R}}_{1h} = \T{R}_1^T \T{R}_2 \tilde{\T{R}}_{2h}
+\end{displaymath}
+\item \kw{hinge\{2\}} the orientation with respect to node 2
+of the reference used to compute the linear strain is reset
+to the value resulting from the node 1 hinge orientation
+and the node 2 orientation
+\begin{displaymath}
+	\tilde{\T{R}}_{2h} = \T{R}_2^T \T{R}_1 \tilde{\T{R}}_{1h}
+\end{displaymath}
+\item unrecognized hints are passed through to the constitutive law.
+\end{itemize}
+
+\subsubsection{Output}
+In addition to the standard output, the \kw{deformable axial joint}
+outputs:
+\begin{itemize}
+\item column 14: the relative rotation about axis 3
+\end{itemize}
+If the constitutive law is either viscous or viscoelastic:
+\begin{itemize}
+\item column 15: the relative angular velocity about axis 3
+\end{itemize}
+% Further optional columns contain any output from the constitutive law.
+
+
+
 \subsection{Deformable displacement hinge}
 Deprecated; use the 
 \hyperref{\kw{deformable displacement joint}}
@@ -3477,10 +3551,12 @@ changes during the analysis.
     \bnt{joint_type} ::= \kw{deformable displacement joint}
 
     \bnt{joint_arglist} ::= 
-        \bnt{node_1_label} , (\ty{Vec3}) \bnt{relative_offset_1}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
-        \bnt{node_2_label} , (\ty{Vec3}) \bnt{relative_offset_2}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
+        \bnt{node_1_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset_1}
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+        \bnt{node_2_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset_2}
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
         \bnt{(ConstitutiveLaw<3D>)} \bnt{const_law}
 \end{Verbatim}
 %\end{verbatim}
@@ -3569,7 +3645,7 @@ If the constitutive law is either viscous or viscoelastic:
 
 
 
-\subsection{Deformable hinge}
+\subsection{Deformable Hinge}
 \label{sec:EL:JOINT:DEFORMABLEHINGE}
 This joint implements a configuration dependent moment that is exchanged
 between two nodes.
@@ -3588,11 +3664,11 @@ changes during the analysis.
 
     \bnt{joint_arglist} ::= 
         \bnt{node_1_label}
-        [ , \kw{position} , (\ty{Vec3}) \bnt{relative_position_1} ]
-        [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+            [ , \kw{position} , (\ty{Vec3}) \bnt{relative_position_1} ]
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
         \bnt{node_2_label} 
-        [ , \kw{position} , (\ty{Vec3}) \bnt{relative_position_2} ]
-        [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
+            [ , \kw{position} , (\ty{Vec3}) \bnt{relative_position_2} ]
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
         (\ty{ConstitutiveLaw<3D>}) \bnt{const_law}
         [ , \kw{orientation description} ,
             \{ \kw{euler123} | \kw{euler313} | \kw{euler 321}
@@ -3713,10 +3789,12 @@ in combining a \kw{deformable hinge} and a \kw{deformable displacement joint}.
     \bnt{joint_type} ::= \kw{deformable joint}
 
     \bnt{joint_arglist} ::= 
-        \bnt{node_1_label} , (\ty{Vec3}) \bnt{relative_offset_1}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
-        \bnt{node_2_label} , (\ty{Vec3}) \bnt{relative_offset_2}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
+        \bnt{node_1_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset_1}
+            [ , \kw{orientation} ,(\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+        \bnt{node_2_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset_2}
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
         (\ty{ConstitutiveLaw<6D>}) \bnt{const_law}
         [ , \kw{orientation description} ,
             \{ \kw{euler123} | \kw{euler313} | \kw{euler 321}
