--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -3333,7 +3333,8 @@ This joint implements a Cardano's joint, also known as Hooke's joint
 or Universal joint, which is made of a sequence
 of two revolute hinges orthogonal to each other, one about relative axis 2
 and one about relative axis 3 of the reference systems
-defined by the two \kw{hinge} statements.
+defined by the two \kw{orientation} % \kw{hinge}
+statements.
 In other words, this joint constrains the relative axis 3 of node 1 
 to be always orthogonal to the relative axis 2 of node 2.
 As a result, torque is transmitted about axis 1 of both nodes.
@@ -3343,10 +3344,12 @@ The relative position is constrained as well.
     \bnt{joint_type} ::= \kw{cardano hinge}
 
     \bnt{joint_arglist} ::= 
-        \bnt{node_1_label} , (\ty{Vec3}) \bnt{relative_offset_1}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
-        \bnt{node_2_label} , (\ty{Vec3}) \bnt{relative_offset_2}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ]
+        \bnt{node_1_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset_1}
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+        \bnt{node_2_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset_2}
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ]
 \end{Verbatim}
 %\end{verbatim}
 Note: this joint does not represent a constant velocity joint,
@@ -3371,10 +3374,11 @@ See above for details about the formulation.
     \bnt{joint_type} ::= \kw{cardano pin}
 
     \bnt{joint_arglist} ::= 
-        \bnt{node_label} , (\ty{Vec3}) \bnt{relative_offset}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix} ] ,
-        (\ty{Vec3}) \bnt{absolute_pin_position}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{absolute_pin_orientation_matrix} ]
+        \bnt{node_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset}
+            [ , \kw{orientation } , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix} ] ,
+        \kw{position } , (\ty{Vec3}) \bnt{absolute_pin_position}
+        [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{absolute_pin_orientation_matrix} ]
 \end{Verbatim}
 %\end{verbatim}
 \emph{Note: this is equivalent to a
@@ -3394,9 +3398,9 @@ See the \kw{cardano hinge} for more details.
 
     \bnt{joint_arglist} ::= 
         \bnt{node_1_label}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
         \bnt{node_2_label}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ]
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ]
 \end{Verbatim}
 %\end{verbatim}
 
@@ -4011,9 +4015,9 @@ by a drive.
 
     \bnt{joint_arglist} ::= 
         \bnt{node_1_label}
-        [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
         \bnt{node_2_label}
-        [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
         (\ty{TplDriveCaller<Vec3>}) \bnt{hinge_orientation}
 \end{Verbatim}
 %\end{verbatim}
@@ -4599,10 +4603,12 @@ and to rotate about the common relative axis 3.
     \bnt{joint_type} ::= \kw{plane displacement}
 
     \bnt{joint_arglist} ::= 
-        \bnt{node_1_label} , (\ty{Vec3}) \bnt{relative_offset_1}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
-        \bnt{node_2_label} , (\ty{Vec3}) \bnt{relative_offset_2}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ]
+        \bnt{node_1_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset_1}
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+        \bnt{node_2_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset_2}
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ]
 \end{Verbatim}
 %\end{verbatim}
 Note: this element is temporarily disabled;
@@ -4621,10 +4627,11 @@ See also Section~\ref{sec:EL:STRUCT:JOINT:PLANE_DISPLACEMENT}.
     \bnt{joint_type} ::= \kw{plane displacement pin}
 
     \bnt{joint_arglist} ::= 
-        \bnt{node_label} , (\ty{Vec3}) \bnt{relative_offset}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix} ] ,
-        (\ty{Vec3}) \bnt{absolute_pin_position}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{absolute_pin_orientation_matrix} ]
+        \bnt{node_label} ,
+            \kw{position} , (\ty{Vec3}) \bnt{relative_offset}
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix} ] ,
+        \kw{position} , (\ty{Vec3}) \bnt{absolute_pin_position}
+        [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{absolute_pin_orientation_matrix} ]
 \end{Verbatim}
 %\end{verbatim}
 Note: this element is temporarily disabled;
@@ -4659,9 +4666,9 @@ the joint initial orientation.
 
     \bnt{joint_arglist} ::= 
         \bnt{node_1_label}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_1} ] ,
         \bnt{node_2_label}
-        [ , \kw{hinge} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
+            [ , \kw{orientation} , (\ty{OrientationMatrix}) \bnt{relative_orientation_matrix_2} ] ,
 \end{Verbatim}
 %\end{verbatim}
 
@@ -6163,7 +6170,7 @@ A pin constraint between two rigid bodies is released:
         10., null, diag, 1.e-1,1.e-1,1.e-3;
     # ...
     # this constraint will be released when Time = 10 s
-    driven: 1, string, "Time<10.",
+    driven: 1, string, "Time < 10.",
     joint: 1, spherical hinge,
         BODY_1,
             position, null,
