--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -21,6 +21,8 @@ MBDyn 1.X-Devel
 		- added referenceable template drive callers
 		- added "deformable axial joint"
 		- added elastomeric damper (from Gandhi, Chopra, JAHS 1994)
+		- log structural forces (Reinhard Resch)
+		- log missing joint types
 	Backward compatibility issues:
 	Known issues:
 		- Schur solver is broken
