(un)document total equation/reaction

--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -5042,6 +5042,18 @@ when one node is grounded.
 An alternative way to model a grounded spherical hinge requires
 the use of another node, clamped by a \kw{clamp} joint.
 
+
+
+\subsection{Total equation}
+\label{sec:EL:STRUCT:JOINT:TOTAL_EQUATION}
+\emph{Original implementation: Alessandro Fumagalli, Marco Morandini.}
+
+See also
+\hyperref{\kw{total reaction}}{\kw{total reaction} (see Section~}{)}{sec:EL:STRUCT:JOINT:TOTAL_REACTION}.
+TODO
+
+
+
 \subsection{Total joint}
 \label{sec:EL:STRUCT:JOINT:TOTAL_JOINT}
 \emph{Original implementation: Alessandro Fumagalli; \\
@@ -5354,6 +5366,16 @@ the hint is passed to the Vec3 drive hint parser.
 \item \kw{orientation-drive3} resets the absolute orientation drive;
 the hint is passed to the Vec3 drive hint parser.
 \end{itemize}
+
+
+
+\subsection{Total reaction}
+\label{sec:EL:STRUCT:JOINT:TOTAL_REACTION}
+\emph{Original implementation: Alessandro Fumagalli, Marco Morandini.}
+
+See also 
+\hyperref{\kw{total equation}}{\kw{total equation} (see Section~}{)}{sec:EL:STRUCT:JOINT:TOTAL_EQUATION}.
+TODO
 
 
 
